--- a/AlleleSail_demo.ipynb
+++ b/AlleleSail_demo.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMyPwS8w383JgJyC2+RTpj9",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/HayLab/AlleleSail/blob/main/AlleleSail_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,18 +12,20 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "fW5lkFSxxKOr"
+      },
       "source": [
         "#Modeling Allele Sail: A tutorial!\n",
         "--------------------------------------\n",
-        "First, we'll clone the project and move into the directory. This simulation writes data to files, so we'll also create a folder to store the data files in"
-      ],
-      "metadata": {
-        "id": "fW5lkFSxxKOr"
-      }
+        "This is a python-based tool with a command-line interface, so using a terminal is a pre-requisite! Also, I'm a Windows user, so I don't know how much of this is translatable to Mac. With any questions, please don't hesistate to reach out to mljohnso@caltech.edu (or haybruce@caltech.edu, if my contact info ends up changing and I forget to update it here).\n",
+        "\n",
+        "Starting from how to get the simulation onto your computer: We'll clone the project and move into the directory. This simulation writes data to files, so we'll also create a folder to store the data files in"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -49,8 +35,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'AlleleSail'...\n",
             "remote: Enumerating objects: 23, done.\u001b[K\n",
@@ -66,25 +52,23 @@
       "source": [
         "!git clone https://github.com/HayLab/AlleleSail\n",
         "%cd AlleleSail\n",
-        "!mkdir data"
+        "!mkdir demo_data"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "If we were running this on a local machine, here we would want to create a virtual environment to install the required packages, but colab takes care of this for us. More information on this process can be found [here.](https://packaging.python.org/en/latest/guides/installing-using-pip-and-virtual-environments/) We'll move onto using the simulation, assuming that all required packages are installed.\n",
-        "\n",
-        "The simulation uses a command-line interface to take in inputs. Let's see what inputs are possible."
-      ],
       "metadata": {
         "id": "UPtq13u7xhEL"
-      }
+      },
+      "source": [
+        "If we were running this on a local machine, here we would want to create a virtual environment to install the required packages, but colab takes care of this for us. To learn how to create a venv and install packages, you can find more information on this process [here.](https://packaging.python.org/en/latest/guides/installing-using-pip-and-virtual-environments/) We'll move onto using the simulation, assuming that all required packages are installed.\n",
+        "\n",
+        "The simulation uses a command-line interface to take in inputs. Let's see what inputs are possible."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python alleleSail_sim.py -h"
-      ],
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -92,11 +76,10 @@
         "id": "lBdX5MMdf5nP",
         "outputId": "25095fec-9dab-4879-ab3e-bfab2637b051"
       },
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "usage: alleleSail_sim.py [-h] [-a ALLELES [ALLELES ...]] [-m MODS] [--somatic]\n",
             "                         [-sex SEX_DETERMINATION] [--MC] [-n NUM_GENS] [-i INTRO] [-e EFFICIENCY]\n",
@@ -156,27 +139,27 @@
             "                        file name for data to be appended to\n"
           ]
         }
+      ],
+      "source": [
+        "!python alleleSail_sim.py -h"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "That's a lot of inputs ! Let's see an example. We'll start by modeling an allele sail for modification.\n",
-        "\n",
-        "The default configuration uses four alleles - [['E', 'O'], ['S', 'W']] E and O represent locus 1; they are our Edited allele (E) or our Original allele (S). At the other locus, we either have our editor (S) or the wildtype locus (W).\n",
-        "\n",
-        "Let's use a population of size 1000 (-k 1000), and we'll introduce our sail at a frequency of 5% (-i 0.05). I only want this simulation to run for 50 generations (-n 50) and to run 5 times (-r 5). We'll also add in maternal carryover (--MC) and a fitness cost (by default additive) on the editor (S) that applies to both males and females (-fc 2 E 0.1). *Note: If we wanted this to just apply to females, we'd use -fc 0 E 0.1, and if we just wanted this to apply to males, we'd use -fc 1 E 0.1*"
-      ],
       "metadata": {
         "id": "V0d97Y8UhlRe"
-      }
+      },
+      "source": [
+        "That's a lot of inputs ! To break it down a little more, let's see an example. We'll start by modeling an allele sail for modification.\n",
+        "\n",
+        "The default configuration uses four alleles - **[['E', 'O'], ['S', 'W']]**. E and O represent locus 1; they are our Edited allele (E) or our Original allele (S). At the other locus, we either have our editor (S) or the wildtype locus (W).\n",
+        "\n",
+        "Let's use a population of size 1000 (-k 1000), and we'll introduce our sail at a frequency of 5% (-i 0.05). I only want this simulation to run for 50 generations (-n 50) and to run 5 times (-r 5). We'll also add in maternal carryover (--MC) and a fitness cost (by default additive) on the editor (S) that applies to both males and females (-fc 2 E 0.1). *Note: If we wanted this to just apply to females, we'd use -fc 0 E 0.1, and if we just wanted this to apply to males, we'd use -fc 1 E 0.1*"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python alleleSail_sim.py -l intro_0.05_fc_0.1 -fn data/modification_dominant_MC \\\n",
-        "  -r 5 -n 50 -k 1000 -i 0.05 --MC -fc 2 E 0.1"
-      ],
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -184,11 +167,10 @@
         "id": "0SaMepg5oqij",
         "outputId": "4f52df50-5710-4f3b-d547-c35f07e00bdb"
       },
-      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[50]\n",
             "[[2, ['E'], 0.1, ['Q'], 'additive']]\n",
@@ -208,22 +190,24 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "!python alleleSail_sim.py -l intro_0.05_fc_0.1 -fn demo_data/modification_dominant_MC \\\n",
+        "  -r 5 -n 50 -k 1000 -i 0.05 --MC -fc 2 E 0.1"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Let's check to see if our files are there!"
-      ],
       "metadata": {
         "id": "AkuT20tnqUZu"
-      }
+      },
+      "source": [
+        "Let's check to see if our files are there!"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!ls data"
-      ],
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -231,11 +215,10 @@
         "id": "ScB3dL7lqWfB",
         "outputId": "518c291a-376a-4270-bee5-8938b7e23736"
       },
-      "execution_count": 26,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "modification_dominant_MC_allele.csv\tsuppression_XY_noMC_allele.csv\n",
             "modification_dominant_MC_genotype.csv\tsuppression_XY_noMC_genotype.csv\n",
@@ -244,10 +227,16 @@
             "modification_dominant_MC_total_pop.csv\tsuppression_XY_noMC_total_pop.csv\n"
           ]
         }
+      ],
+      "source": [
+        "!ls demo_data"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "YuMz-4BLrJNO"
+      },
       "source": [
         "We now have five files! Each contains different information.\n",
         "**modification_dominant_MC_allele.csv** contains information about the number of allele-carriers in the population, for each allele.\n",
@@ -257,22 +246,24 @@
         "**modification_dominant_MC_total_pop.csv** contains informations about the total number of individuals that grew up in the \"wild\" - this is the total number of individual NOT including releases.\n",
         "\n",
         "To analyze this data, use the csv analyzer of your choice!"
-      ],
-      "metadata": {
-        "id": "YuMz-4BLrJNO"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Now, let's try modeling one for suppression. Let's model an allele sail in the XY system without maternal carryover, for a population of size 1000. We'll label the run with the introduction frequency and number of repeated releases, and save our data to the file \"suppression_XY_noMC\". We'll also do 10 runs for 50 generations each. Since we want to do releases every generation, as opposed to just at the beginning, lets set the original introduction frequency to 0, and use the 'additional intros' flag to release every generation. Males are denoted by 1, the transgenic genotype we want is genotype 1 (more information on this below), we want to start at generation 0, and we'll go every generation until the simulation ends. I'll store this additional intro info into some variables, to make them easier to re-use. To do so, we'll switch to the shell for this, using the command %%shell"
-      ],
       "metadata": {
         "id": "OiZ7b0Dii56F"
-      }
+      },
+      "source": [
+        "Now, let's try modeling one for suppression. Let's model an allele sail in the XY system without maternal carryover, for a population of size 1000. We'll label the run with the introduction frequency and number of repeated releases, and save our data to the file \"suppression_XY_noMC\". We'll also do 10 runs for 50 generations each. Since we want to do releases every generation, as opposed to just at the beginning, lets set the original introduction frequency to 0, and use the 'additional intros' flag to release every generation. Males are denoted by 1, the transgenic genotype we want is genotype 1 (more information on this below), we want to start at generation 0, and we'll go every generation until the simulation ends. I'll store this additional intro info into some variables, to make them easier to re-use. To do so, we'll switch to the shell for this, using the command %%shell"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "PAN3A2lDlFdP"
+      },
+      "outputs": [],
       "source": [
         "%%shell\n",
         "males=1\n",
@@ -283,30 +274,23 @@
         "gap=1\n",
         "freq=0.1\n",
         "\n",
-        "python alleleSail_sim.py -l intro_${freq}_repeats_50 -fn data/suppression_XY_noMC \\\n",
+        "python alleleSail_sim.py -l intro_${freq}_repeats_50 -fn demo_data/suppression_XY_noMC \\\n",
         "  -sex XY -r $num_runs -n 50 -k 1000  \\\n",
         "  -i 0 -ai $males $genotype $freq $first_gen $gap $repeats"
-      ],
-      "metadata": {
-        "id": "PAN3A2lDlFdP"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Let's check to see if our files ran"
-      ],
       "metadata": {
         "id": "vf2wm3U2oRIF"
-      }
+      },
+      "source": [
+        "Let's check to see if our files ran"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!ls data/"
-      ],
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -314,27 +298,45 @@
         "id": "kdz_QG7hoVUu",
         "outputId": "efacb5f0-2008-44e1-f93e-0aa19d588425"
       },
-      "execution_count": 24,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "suppression_XY_noMC_allele.csv\t   suppression_XY_noMC_total.csv\n",
             "suppression_XY_noMC_genotype.csv   suppression_XY_noMC_total_pop.csv\n",
             "suppression_XY_noMC_NEWallele.csv\n"
           ]
         }
+      ],
+      "source": [
+        "!ls demo_data/"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "We now have information on allele carriers, individuals of different genotypes, allele frequencies, the total number of individuals (including those released), and the total number of individuals not including those released. This demo will hopefully be updated in the future, but for any questions please feel free to reach out to mljohnso@caltech.edu"
-      ],
       "metadata": {
         "id": "v9pVzPLoobGY"
-      }
+      },
+      "source": [
+        "We now have information on allele carriers, individuals of different genotypes, allele frequencies, the total number of individuals (including those released), and the total number of individuals not including those released. This demo will hopefully be updated in the future, with more info about how to play around with the code and analyze files, but for any questions please feel free to reach out to mljohnso@caltech.edu"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMyPwS8w383JgJyC2+RTpj9",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
