Update AlleleSail_demo.ipynb ?

--- a/AlleleSail_demo.ipynb
+++ b/AlleleSail_demo.ipynb
@@ -319,7 +319,9 @@
         "id": "v9pVzPLoobGY"
       },
       "source": [
-        "We now have information on allele carriers, individuals of different genotypes, allele frequencies, the total number of individuals (including those released), and the total number of individuals not including those released. This demo will hopefully be updated in the future, with more info about how to play around with the code and analyze files, but for any questions please feel free to reach out to mljohnso@caltech.edu"
+        "We now have information on allele carriers, individuals of different genotypes, allele frequencies, the total number of individuals (including those released), and the total number of individuals not including those released.\n",
+        "A note on runtimes: the above simulations, with 1000 individuals, run at about 7 seconds per run on my machine. For the paper, we used simulations with carrying capacity of 10000 individuals, and saw run-times of closer to 70 seconds per simulation.\n",
+        "This demo will hopefully be updated in the future, with more info about how to play around with the code and analyze files, but for any questions please feel free to reach out to mljohnso@caltech.edu"
       ]
     }
   ],
